--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     buildCommand: cd api && bundle install
     startCommand: cd api && bundle exec puma -C config/puma.rb
     healthCheckPath: /
-    plan: starter plus
+    plan: starter
     envVars:
       - key: DATABASE_URL
         fromDatabase:
