--- a/api/.gitignore
+++ b/api/.gitignore
@@ -25,3 +25,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/config/credentials/production.key
+
+/config/credentials/development.key
