--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -81,6 +81,4 @@ test:
 #
 production:
   <<: *default
-  database: api_production
-  username: api
-  password: <%= ENV['API_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
